# Embedded-Telemetry-System

./: CMakeLists.txt  LICENSE  README.md
include/: crc8.hpp  radio_link.hpp  scheduler.hpp  sensor.hpp  telemetry_deserializer.hpp  telemetry_packet.hpp  telemetry_serializer.hpp
src/: crc8.cpp  main.cpp  radio_link.cpp  scheduler.cpp  sensor.cpp  telemetry_deserializer.cpp  telemetry_packet.cpp  telemetry_serializer.cpp  test.cpp
